@@ -1,3 +1,8 @@
+2010-10-06 Johannes Erdmann <johannes.erdmann@cern.ch>
+	
+	* InterfaceGoTopTree.cxx : require IsTopInputs; remove obsolte isolation (was not used anyway)
+	* tag KLFitter-00-03-09
+
 2010-10-05 Stefan Guindon <stefan.guindon@cern.ch>
 	
 	* LikelihoodBase.h: back to SetCutBTag - Consistency with TopKLFitter
